完成《首页》《新闻动态》《案例》《公共内容页》样式布局

--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "pages":[
-    "pages/index/index",
-    "pages/news/news",
     "pages/demo/demo",
-    "pages/about/about"
+    "pages/news/news",
+    "pages/index/index",
+    "pages/about/about",
+    "pages/details/details"
   ],
   "window":{
     "backgroundTextStyle":"light",
